@startuml

title __ADAPTERS's Class Diagram__\n

  namespace com.example.sickar {
    namespace main {
      namespace adapters {
        class com.example.sickar.main.adapters.ItemRecyclerViewAdapter {
            {static} - TAG : String
            - context : Context
            - itemData : ArrayList<Item>
            - itemTouchHelper : ItemTouchHelper
            + ItemRecyclerViewAdapter()
            + addItem()
            + getItemCount()
            + getItemData()
            + getItemDataStrings()
            + onBindViewHolder()
            + onCreateViewHolder()
            + updateItem()
        }
      }
    }
  }
  

  namespace com.example.sickar {
    namespace main {
      namespace adapters {
        class com.example.sickar.main.adapters.ItemRecyclerViewAdapter.ViewHolder {
            - clearAR : ImageButton
            - context : Context
            - displayAR : Switch
            - images : ImageButton
            - titleText : TextView
            - viewPager : ViewPager
            ~ ViewHolder()
            ~ bindTo()
        }
      }
    }
  }
  

  namespace com.example.sickar {
    namespace main {
      namespace adapters {
        class com.example.sickar.main.adapters.SystemsPagerAdapter {
            {static} - TAG : String
            - fragmentList : List<Fragment>
            - fragmentManager : FragmentManager
            - fragmentTitleList : List<String>
            + SystemsPagerAdapter()
            + addFragment()
            + clear()
            + containsSystem()
            + getCount()
            + getItem()
            + getPageTitle()
        }
      }
    }
  }
  

  com.example.sickar.main.adapters.ItemRecyclerViewAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.sickar.main.adapters.ItemRecyclerViewAdapter +-down- com.example.sickar.main.adapters.ItemRecyclerViewAdapter.ViewHolder
  com.example.sickar.main.adapters.ItemRecyclerViewAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.sickar.main.adapters.ItemRecyclerViewAdapter.ViewHolder o-- com.example.sickar.main.adapters.SystemsPagerAdapter : pagerAdapter
  com.example.sickar.main.adapters.SystemsPagerAdapter -up-|> androidx.fragment.app.FragmentPagerAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
